# mall

./: .env.example  .gitignore  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: category.rs  lib.rs  mod.rs  prelude.rs  product.rs  product_category.rs  product_region.rs  region.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250807_063404_create_user.rs  m20250807_063404_create_users.rs  m20250828_add_user_role.rs  m20250828_create_product_tables.rs
src/: main.rs
src/handlers/: auth.rs  mod.rs  product.rs  user.rs
src/middlewares/: auth.rs
src/models/: app.rs  dtos.rs  mod.rs
src/routes/: mod.rs  product.rs  user.rs
src/services/: auth.rs  email.rs  mod.rs  product.rs  user.rs
