[package]
name = "mall"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
axum = "0.8.4"
bcrypt = "0.17.0"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-json" ] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
chrono = { version = "0.4.41", features = ["serde"] }
migration = { path = "migration" }
entity = { path = "entity" }
anyhow = "1.0.98"

[dependencies.uuid]
version = "1.17.0"
features = [ "v4", "serde" ]
